	* "View->Tracing Image" added : See handbook section 5.5 for details
	* Gaussian blur effect for images with alpha now is about 40% faster and uses less memory
	* Kuwahara-Nagao blur effect added (edge-preserving blur)
	* Dilation and erosion effects added
	* Seven new edge detection filters added - Sobel, Prewitt, Kirsch, Gradient, Roberts, Laplace, Morphological
	* Drawing operations on utility channels now respect tool opacity
	* Drawing in image channel with coupled alpha now ignores drawing modes for alpha channel
	* Smudge tool now works about two times faster
	* 12 new blend modes added
	* Invert effect now respects masking
	* BUGFIX - Polygon line selection now clearer in Windows version
	* BUGFIX - Occasional redraw glitches in paste and gradient previews eliminated
	* BUGFIX - "Remove All Layers" with layers window closed doesn't cause crash
	* BUGFIX - Pasting in tint mode into indexed images' utility channels now works correctly
	* BUGFIX - Gradient preview now properly shows effect of mask channel on alpha channel
	* BUGFIX - Alt+S key now opens Selection menu as it should
	* BUGFIX - Directory for animation frames is created relative to layers file, as it should be
	* BUGFIX - Saving animation frames in PNG format doesn't cause crash

3.21	2008-6-8

	* Russian translation added by Sergey Irupin
	* Spanish translation updated by Antonio Sanchez Leon
	* Galician translation added by Miguel Anxo Bouzada
	* Use 'xdg-open' if available to open HTML help in default browser on Linux
	* Relaxed sanity checking in XPM loader to accept files with malformed headers
	* "Exact Conversion" option added to Palette->Create Quantized
	* Counting used colours now about twice as fast
	* Workaround for bug in libpng versions 1.2.17 - 1.2.24 added (was losing extra channels when loading)
	* BUGFIX - Canvas, view and palette area borders now can't be messed up by theme engines